@@ -5,6 +5,7 @@ CHANGES
 3.6.2 (unreleased)
 ------------------
 
+- Python 3 support.
 
 3.6.1 (2010-07-06)
 ------------------
